<resources>
    <string name="app_name">ListView</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="coding_duls">Coding Duls</string>
    <string name="info_codingduls">info@codingduls</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="merah">Merah</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="jefri_nichol">Jefri Nichol</string>
    <string name="nicholjerfi_gmail_com">nicholjerfi@gmail.com</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="bagi">Bagi</string>
    <string name="beri_masukan_tentang_app">Beri masukan tentang app</string>
    <string name="gift_card">Gift card</string>
    <string name="kode_kupon_saya">Kode kupon saya</string>
    <string name="ajak_teman_untuk_jadi_host">Ajak teman untuk jadi host</string>
    <string name="daftarkan_properti_anda">Daftarkan properti Anda</string>
    <string name="kontribusi_anda">Kontribusi Anda</string>
    <string name="whislist">Whislist</string>
    <string name="promo">Promo</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="title_activity_pemesanan">PemesananActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
